# virtuals-python

./: .gitignore  README.md  pyproject.toml
examples/: example-custom.py  example-twitter.py  test.py
src/: HaydenKulechov.py
src/virtuals/: game.py  sdk.py
src/virtuals/functions/: telegram.py
src/virtuals_sdk/: game.py  sdk.py
src/virtuals_sdk/functions/: discord.py  telegram.py
